fix translation fr

--- a/translations/fr/translations.json
+++ b/translations/fr/translations.json
@@ -93,7 +93,7 @@
         "fr": "Sauvegarder"
     },
     "Paste/Open youtube link": {
-        "fr": "Copier/ouvrir lien youtube"
+        "fr": "Coller/ouvrir lien youtube"
     }
 }
 
