add filters, add keyevents

--- a/translations/fr/translations.json
+++ b/translations/fr/translations.json
@@ -94,6 +94,9 @@
     },
     "Paste/Open youtube link": {
         "fr": "Coller/ouvrir lien youtube"
+    },
+    "Filters:": {
+        "fr": "Filtres:"
     }
 }
 
