add open link in browser function

--- a/translations/fr/translations.json
+++ b/translations/fr/translations.json
@@ -97,6 +97,15 @@
     },
     "Filters:": {
         "fr": "Filtres:"
+    },
+    "Open in youtube": {
+        "fr": "Ouvrir dans youtube"
+    },
+    "Open in dailymotion": {
+        "fr": "Ouvrir dans dailymotion"
+    },
+    "Download": {
+        "fr": "Télécharger"
     }
 }
 
