add download cancel function

--- a/translations/fr/translations.json
+++ b/translations/fr/translations.json
@@ -106,6 +106,12 @@
     },
     "Download": {
         "fr": "Télécharger"
+    },
+    "Cancel": {
+        "fr": "Annuler"
+    },
+    "Download canceled!": {
+        "fr": "Téléchargement annulé!"
     }
 }
 
