--- a/translations/fr/translations.json
+++ b/translations/fr/translations.json
@@ -136,6 +136,9 @@
     },
     "Next": {
         "fr": "Suiv"
+    },
+    "Ht5streamer configuration:": {
+        "fr": "Configuration de ht5streamer:"
     }
 }
 
