add playlist system

--- a/translations/fr/translations.json
+++ b/translations/fr/translations.json
@@ -145,6 +145,9 @@
     },
     "Copy dailymotion link": {
         "fr": "Copier le lien dailymotion"
+    },
+    "Save to playlist": {
+        "fr": "Sauvegarder dans la playlist"
     }
 }
 
