--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gmediafinder (0.1.1ppa1~raring) raring; urgency=high
+ht5streamer (0.1.1ppa1~raring) raring; urgency=high
 
   * add dailymotion suggested videos
   * add playslist system with db storage
