--- a/locales/fr.json
+++ b/locales/fr.json
@@ -104,5 +104,6 @@
 	"Stopped... ": "Stopped... ",
 	"Open mega link": "Ouvrir dans Mega-link",
 	"File not available on mega.co...": "Fichier non disponible sur mega.co...",
-	"Your mega.co link is valid but can't be played yet, (wait a few minutes...)": "Votre lien mega.co est valide mais ne peut pas encore être lu ou téléchargé, patientez quelques minutes..."
+	"Your mega.co link is valid but can't be played yet, (wait a few minutes...)": "Votre lien mega.co est valide mais ne peut pas encore être lu ou téléchargé, patientez quelques minutes...",
+	"<p>Around %s results found </p>": "<p>Environ %s résultats trouvés </p>"
 }
