--- a/locales/en.json
+++ b/locales/en.json
@@ -1,101 +1,102 @@
 {
-    "Search:": "Search:",
-    "Enter your search...": "Enter your search...",
-    "Send": "Send",
-    "Search type:": "Search type:",
-    "Engine:": "Engine:",
-    "Views:": "Views:",
-    "Posted by:": "Posted by:",
-    "Maximum resolution:": "Maximum resolution:",
-    " Loading videos...": " Loading videos...",
-    "<p><strong>No videos</strong> found...</p>": "<p><strong>No videos</strong> found...</p>",
-    "<p><strong>No playlist</strong> found...</p>": "<p><strong>No playlist</strong> found...</p>",
-    "videos found": "videos found",
-    "playlists found": "playlists found",
-    "Converting video to mp3, please wait...": "Converting video to mp3, please wait...",
-    "video converted successfully !": "video converted successfully !",
-    "Waiting for connection...": "Waiting for connection...",
-    "done at": "done at",
-    "Download ended !": "Download ended !",
-    "Downloading": "Downloading",
-    "Convert to mp3": "Convert to mp3",
-    "Close": "Close",
-    "Settings": "Settings",
-    "Language:": "Language:",
-    "verified videos in this playlist": "verified videos in this playlist",
-    "Download directory:": "Download directory:",
-    "Select": "Select",
-    "Copy": "Copy",
-    "Save": "Save",
-    "Paste/Open youtube link": "Paste/Open youtube link",
-    "Filters:": "Filters:",
-    "Open in ": "Open in ",
-    "Download": "Download",
-    "Cancel": "Cancel",
-    "Download canceled!": "Download canceled!",
-    "Open related videos": "Open related videos",
-    "Videos found": "Videos found",
-    "Load more videos": "Load more videos",
-    "Order by:": "Order by:",
-    "Relevance": "Relevance",
-    "Published": "Published",
-    "Views": "Views",
-    "Rating": "Rating",
-    "Prev": "Prev",
-    "Next": "Next",
-    "Ht5streamer configuration:": "Ht5streamer configuration:",
-    "Copy youtube link": "Copy youtube link",
-    "Copy dailymotion link": "Copy dailymotion link",
-    "Save to playlist": "Save to playlist",
-    "Remove": "Remove",
-    "Add folder": "Add folder",
-    "Rename": "Rename",
-    "Library": "Library",
-    "Results": "Results",
-    "Select or create a folder (right click) to save your video and close the window to validate.": "Select or create a folder (right click) to save your video and close the window to validate.",
-    "Please do not use spaces or special characters in your playlist name!": "Please do not use spaces or special characters in your playlist name!",
-    "Categories": "Categories",
-    "Category:": "Category:",
-    "Browsing mode, use the pagination bar to navigate": "Browsing mode, use the pagination bar to navigate",
-    "can't download this file...": "can't download this file...",
-    "Enter your search": "Enter your search",
-    "Copy youporn link": "Copy youporn link",
-    "unknown": "unknown",
-    "Videos": "Videos",
-    "Playlists": "Playlists",
-    "Channels": "Channels",
-    "<p><strong>No channels</strong> found...</p>": "<p><strong>No channels</strong> found...</p>",
-    "channels found": "channels found",
-    "videos found in this channel" : "videos found in this channel",
-    "<p><strong>No sounds</strong> found...</p>" :"<p><strong>No sounds</strong> found...</p>",
-    "Songs/Artists" : "Songs/Artists",
-    "A new version is available !" : "A new version is available !",
-    "Update" : "Update",
-    "Your software is up to date !" : "Your software is up to date !",
-    "Downloading: " : "Downloading: ",
-    "Installing update..." : "Installing update...",
-    "Update successfully installed! please restart ht5streamer" : "Update successfully installed! please restart ht5streamer",
-    "Update error, please report the problem... or try to reinstall manually !" : "Update error, please report the problem... or try to reinstall manually !",
-    "Top rated" : "Top rated",
-    "Most viewed" : "Most viewed",
-    "Date:" : "Date:",
-    "Today" : "Today",
-    "This week" : "This week",
-    "This month" : "This month",
-    "All time" : "All time",
-    "Local files" : "Local files",
-    "Local network interface:" : "Local network interface:",
-    "Add or remove directories to scan for your local library:" : "Add or remove directories to scan for your local library:",
-    "Add" : "Add",
-    "Remove" : "Remove",
-    "Please add local folders to scan in the settings" : "Please add local folders to scan in the settings",
-    "please select a network interface in the configuration panel" : "please select a network interface in the configuration panel",
-    "results found" : "results found",
-    "Local library" : "Local library",
-    "Update error, please report the problem... !" : "Update error, please report the problem... !",
-    "Welcome to Ht5streamer !<br><br>Make a new search or select a category to start..." : "Welcome to Ht5streamer !<br><br>Make a new search or select a category to start...",
-    "Downloads" : "Downloads",
-    "Open Download folder" : "Open Download folder",
-    "Update files list..." : "Update files list...",
-    "Updating..." : "Updating..."
+	"Search:": "Search:",
+	"Enter your search...": "Enter your search...",
+	"Send": "Send",
+	"Search type:": "Search type:",
+	"Engine:": "Engine:",
+	"Views:": "Views:",
+	"Posted by:": "Posted by:",
+	"Maximum resolution:": "Maximum resolution:",
+	" Loading videos...": " Loading videos...",
+	"<p><strong>No videos</strong> found...</p>": "<p><strong>No videos</strong> found...</p>",
+	"<p><strong>No playlist</strong> found...</p>": "<p><strong>No playlist</strong> found...</p>",
+	"videos found": "videos found",
+	"playlists found": "playlists found",
+	"Converting video to mp3, please wait...": "Converting video to mp3, please wait...",
+	"video converted successfully !": "video converted successfully !",
+	"Waiting for connection...": "Waiting for connection...",
+	"done at": "done at",
+	"Download ended !": "Download ended !",
+	"Downloading": "Downloading",
+	"Convert to mp3": "Convert to mp3",
+	"Close": "Close",
+	"Settings": "Settings",
+	"Language:": "Language:",
+	"verified videos in this playlist": "verified videos in this playlist",
+	"Download directory:": "Download directory:",
+	"Select": "Select",
+	"Copy": "Copy",
+	"Save": "Save",
+	"Paste/Open youtube link": "Paste/Open youtube link",
+	"Filters:": "Filters:",
+	"Open in ": "Open in ",
+	"Download": "Download",
+	"Cancel": "Cancel",
+	"Download canceled!": "Download canceled!",
+	"Open related videos": "Open related videos",
+	"Videos found": "Videos found",
+	"Load more videos": "Load more videos",
+	"Order by:": "Order by:",
+	"Relevance": "Relevance",
+	"Published": "Published",
+	"Views": "Views",
+	"Rating": "Rating",
+	"Prev": "Prev",
+	"Next": "Next",
+	"Ht5streamer configuration:": "Ht5streamer configuration:",
+	"Copy youtube link": "Copy youtube link",
+	"Copy dailymotion link": "Copy dailymotion link",
+	"Save to playlist": "Save to playlist",
+	"Remove": "Remove",
+	"Add folder": "Add folder",
+	"Rename": "Rename",
+	"Library": "Library",
+	"Results": "Results",
+	"Select or create a folder (right click) to save your video and close the window to validate.": "Select or create a folder (right click) to save your video and close the window to validate.",
+	"Please do not use spaces or special characters in your playlist name!": "Please do not use spaces or special characters in your playlist name!",
+	"Categories": "Categories",
+	"Category:": "Category:",
+	"Browsing mode, use the pagination bar to navigate": "Browsing mode, use the pagination bar to navigate",
+	"can't download this file...": "can't download this file...",
+	"Enter your search": "Enter your search",
+	"Copy youporn link": "Copy youporn link",
+	"unknown": "unknown",
+	"Videos": "Videos",
+	"Playlists": "Playlists",
+	"Channels": "Channels",
+	"<p><strong>No channels</strong> found...</p>": "<p><strong>No channels</strong> found...</p>",
+	"channels found": "channels found",
+	"videos found in this channel": "videos found in this channel",
+	"<p><strong>No sounds</strong> found...</p>": "<p><strong>No sounds</strong> found...</p>",
+	"Songs/Artists": "Songs/Artists",
+	"A new version is available !": "A new version is available !",
+	"Update": "Update",
+	"Your software is up to date !": "Your software is up to date !",
+	"Downloading: ": "Downloading: ",
+	"Installing update...": "Installing update...",
+	"Update successfully installed! please restart ht5streamer": "Update successfully installed! please restart ht5streamer",
+	"Update error, please report the problem... or try to reinstall manually !": "Update error, please report the problem... or try to reinstall manually !",
+	"Top rated": "Top rated",
+	"Most viewed": "Most viewed",
+	"Date:": "Date:",
+	"Today": "Today",
+	"This week": "This week",
+	"This month": "This month",
+	"All time": "All time",
+	"Local files": "Local files",
+	"Local network interface:": "Local network interface:",
+	"Add or remove directories to scan for your local library:": "Add or remove directories to scan for your local library:",
+	"Add": "Add",
+	"Please add local folders to scan in the settings": "Please add local folders to scan in the settings",
+	"please select a network interface in the configuration panel": "please select a network interface in the configuration panel",
+	"results found": "results found",
+	"Local library": "Local library",
+	"Update error, please report the problem... !": "Update error, please report the problem... !",
+	"Welcome to Ht5streamer !<br><br>Make a new search or select a category to start...": "Welcome to Ht5streamer !<br><br>Make a new search or select a category to start...",
+	"Downloads": "Downloads",
+	"Open Download folder": "Open Download folder",
+	"Update files list...": "Update files list...",
+	"Updating...": "Updating...",
+	"Stopped...": "Stopped...",
+	"Your mega.co link is valid but can't be played yet, (wait a few minutes...)": "Your mega.co link is valid but can't be played yet, (wait a few minutes...)"
 }
