--- a/locales/es.json
+++ b/locales/es.json
@@ -1,100 +1,103 @@
 {
-    "Send": "enviar",
-    "Settings": "Configuración",
-    "Enter your search": "Ingrese su búsqueda",
-    "Paste/Open youtube link": "Pega enlace / Abrir youtube",
-    "Videos found": "Vídeos encontrados",
-    "Update error, please report the problem... or try to reinstall manually !": "Actualización de error, por favor informa del problema ... o tratar de volver a instalar manualmente!",
-    "channels found": "canales encontrados",
-    "Waiting for connection...": "Esperando conexión ...",
-    "All time": "Todo el tiempo",
-    "Download": "descargar",
-    "can't download this file...": "no se puede descargar este archivo ...",
-    "Results": "Resultados",
-    "videos found in this channel": "vídeos que se encuentran en este canal",
-    "results found": "resultados encontrados",
-    "<p><strong>No playlist</strong> found...</p>": "<p> <strong> No una lista de reproducción </ strong> se encuentra ... </ p>",
-    "Posted by:": "Publicado por:",
-    "Convert to mp3": "Convertir a MP3",
-    "Welcome to Ht5streamer !<br><br>Make a new search or select a category to start...": "Bienvenido a Ht5streamer ! <br><br> Hacer una nueva búsqueda o seleccionar una categoría para empezar ...",
-    "Update": "actualización",
-    "Today": "Hoy",
     "Search:": "Buscar:",
-    "Relevance": "Relevancia",
-    "Open in ": "Abre en",
-    "video converted successfully !": "vídeo convertido con éxito!",
-    "Rating": "clasificación",
-    "Videos": "Vídeos",
-    "playlists found": "playlists que se encuentran",
-    "verified videos in this playlist": "vídeos verificadas en esta lista de reproducción",
-    "Converting video to mp3, please wait...": "La conversión de vídeo a mp3, por favor espere ...",
-    "Copy": "copia",
-    "Local library": "biblioteca local",
-    "Language:": "Idioma:",
-    "Library": "biblioteca",
-    "Category:": "Categoría:",
-    "Playlists": "Listas de reproducción",
-    "Save to playlist": "Guardar en la lista de reproducción",
-    "Download directory:": "Descarga directorio:",
-    "Download ended !": "Descargar terminó!",
-    "Add folder": "Añadir carpeta",
-    "Please do not use spaces or special characters in your playlist name!": "Por favor, no utilice espacios ni caracteres especiales en el nombre de la lista!",
-    "Updating...": "Actualizando ...",
-    "This week": "Esta semana",
-    "<p><strong>No sounds</strong> found...</p>": "<p> <strong> No hay sonidos < / strong > se encuentra ... < / p>",
-    "unknown": "desconocido",
-    "Copy dailymotion link": "Copiar enlace dailymotion",
-    "Copy youtube link": "Copiar el enlace de youtube",
-    "Most viewed": "Los más vistos",
-    "<p><strong>No videos</strong> found...</p>": "<p> <strong> No hay vídeos </ strong> se encuentra ... </ p>",
-    "Update successfully installed! please restart ht5streamer": "Actualizar instalado con éxito! Por favor, reinicie ht5streamer",
-    "Close": "cerca",
-    "Engine:": "motor:",
-    "This month": "Este mes",
-    "Views:": "Vistas:",
-    "Copy youporn link": "Copiar enlace youporn",
-    "Local files": "Los archivos locales",
-    "Categories": "Categorías",
-    "Update files list...": "Actualizar lista  ...",
-    "done at": "hecho en",
-    "Installing update...": "Instalación actualización ...",
-    "Downloads": "Descargas",
-    "Order by:": "Ordenar por:",
-    "Ht5streamer configuration:": "Configuración Ht5streamer",
-    "Remove": "eliminar",
-    "Prev": "Anterior",
-    "Downloading: ": "Descargar:",
-    "videos found": "vídeos encontrados",
     "Enter your search...": "Ingrese su búsqueda ...",
-    "Add or remove directories to scan for your local library:": "Agregar o eliminar directorios para buscar en tu biblioteca local:",
-    "Please add local folders to scan in the settings": "Por favor, añada las carpetas locales para escanear en la configuración",
-    "Published": "publicado",
-    "A new version is available !": "Una nueva versión está disponible!",
-    "Open related videos": "Vídeos abiertos relacionados",
-    "Downloading": "Downloading",
-    "Your software is up to date !": "Su software está al día!",
-    "Filters:": "Filtros:",
-    "Top rated": "Más valorados",
-    "Browsing mode, use the pagination bar to navigate": "Modo de navegación, use la barra de paginación para navegar",
-    "Cancel": "cancelar",
-    " Loading videos...": "Cargando vídeos ...",
-    "Download canceled!": "Descarga cancelada !",
-    "Load more videos": "Cargue más vídeos",
-    "Open Download folder": "Abrir Carpeta de descarga",
-    "Maximum resolution:": "Resolución máxima:",
-    "Save": "guardar",
-    "Update error, please report the problem... !": "Actualización de error, por favor informa del problema ... !",
-    "Add": "añadir",
-    "please select a network interface in the configuration panel": "por favor, seleccione una interfaz de red en el panel de configuración",
-    "Songs/Artists": "Canciones / Artistas",
-    "Next": "próximo",
-    "Select or create a folder (right click) to save your video and close the window to validate.": "Seleccione o cree una carpeta (clic derecho) para guardar el vídeo y cerrar la ventana para validar.",
-    "Select": "Seleccionar",
-    "Local network interface:": "Interfaz de red local:",
-    "<p><strong>No channels</strong> found...</p>": "<p> <strong> No hay canales </ strong> se encuentra ... </ p>",
-    "Rename": "rebautizar",
+    "Send": "enviar",
     "Search type:": "Tipo de búsqueda:",
+    "Engine:": "motor:",
+    "Views:": "Vistas:",
+    "Posted by:": "Publicado por:",
+    "Maximum resolution:": "Resolución máxima:",
+    " Loading videos...": "Cargando vídeos ...",
+    "<p><strong>No videos</strong> found...</p>": "<p> <strong> No hay vídeos </ strong> se encuentra ... </ p>",
+    "<p><strong>No playlist</strong> found...</p>": "<p> <strong> No una lista de reproducción </ strong> se encuentra ... </ p>",
+    "videos found": "vídeos encontrados",
+    "playlists found": "playlists que se encuentran",
+    "Converting video to mp3, please wait...": "La conversión de vídeo a mp3, por favor espere ...",
+    "video converted successfully !": "vídeo convertido con éxito!",
+    "Waiting for connection...": "Esperando conexión ...",
+    "done at": "hecho en",
+    "Download ended !": "Descargar terminó!",
+    "Downloading": "Downloading",
+    "Convert to mp3": "Convertir a MP3",
+    "Close": "cerca",
+    "Settings": "Configuración",
+    "Language:": "Idioma:",
+    "verified videos in this playlist": "vídeos verificadas en esta lista de reproducción",
+    "Download directory:": "Descarga directorio:",
+    "Select": "Seleccionar",
+    "Copy": "copia",
+    "Save": "guardar",
+    "Paste/Open youtube link": "Pega enlace / Abrir youtube",
+    "Filters:": "Filtros:",
+    "Open in ": "Abre en",
+    "Download": "descargar",
+    "Cancel": "cancelar",
+    "Download canceled!": "Descarga cancelada !",
+    "Open related videos": "Vídeos abiertos relacionados",
+    "Videos found": "Vídeos encontrados",
+    "Load more videos": "Cargue más vídeos",
+    "Order by:": "Ordenar por:",
+    "Relevance": "Relevancia",
+    "Published": "publicado",
     "Views": "Vistas",
+    "Rating": "clasificación",
+    "Prev": "Anterior",
+    "Next": "próximo",
+    "Ht5streamer configuration:": "Configuración Ht5streamer",
+    "Copy youtube link": "Copiar el enlace de youtube",
+    "Copy dailymotion link": "Copiar enlace dailymotion",
+    "Save to playlist": "Guardar en la lista de reproducción",
+    "Remove": "eliminar",
+    "Add folder": "Añadir carpeta",
+    "Rename": "rebautizar",
+    "Library": "biblioteca",
+    "Results": "Resultados",
+    "Select or create a folder (right click) to save your video and close the window to validate.": "Seleccione o cree una carpeta (clic derecho) para guardar el vídeo y cerrar la ventana para validar.",
+    "Please do not use spaces or special characters in your playlist name!": "Por favor, no utilice espacios ni caracteres especiales en el nombre de la lista!",
+    "Categories": "Categorías",
+    "Category:": "Categoría:",
+    "Browsing mode, use the pagination bar to navigate": "Modo de navegación, use la barra de paginación para navegar",
+    "can't download this file...": "no se puede descargar este archivo ...",
+    "Enter your search": "Ingrese su búsqueda",
+    "Copy youporn link": "Copiar enlace youporn",
+    "unknown": "desconocido",
+    "Videos": "Vídeos",
+    "Playlists": "Listas de reproducción",
     "Channels": "Canales",
-    "Date:": "Fecha:"
+    "<p><strong>No channels</strong> found...</p>": "<p> <strong> No hay canales </ strong> se encuentra ... </ p>",
+    "channels found": "canales encontrados",
+    "videos found in this channel": "vídeos que se encuentran en este canal",
+    "<p><strong>No sounds</strong> found...</p>": "<p> <strong> No hay sonidos < / strong > se encuentra ... < / p>",
+    "Songs/Artists": "Canciones / Artistas",
+    "A new version is available !": "Una nueva versión está disponible!",
+    "Update": "actualización",
+    "Your software is up to date !": "Su software está al día!",
+    "Downloading: ": "Descargar:",
+    "Installing update...": "Instalación actualización ...",
+    "Update successfully installed! please restart ht5streamer": "Actualizar instalado con éxito! Por favor, reinicie ht5streamer",
+    "Update error, please report the problem... or try to reinstall manually !": "Actualización de error, por favor informa del problema ... o tratar de volver a instalar manualmente!",
+    "Top rated": "Más valorados",
+    "Most viewed": "Los más vistos",
+    "Date:": "Fecha:",
+    "Today": "Hoy",
+    "This week": "Esta semana",
+    "This month": "Este mes",
+    "All time": "Todo el tiempo",
+    "Local files": "Los archivos locales",
+    "Local network interface:": "Interfaz de red local:",
+    "Add or remove directories to scan for your local library:": "Agregar o eliminar directorios para buscar en tu biblioteca local:",
+    "Add": "añadir",
+    "Please add local folders to scan in the settings": "Por favor, añada las carpetas locales para escanear en la configuración",
+    "please select a network interface in the configuration panel": "por favor, seleccione una interfaz de red en el panel de configuración",
+    "results found": "resultados encontrados",
+    "Local library": "biblioteca local",
+    "Update error, please report the problem... !": "Actualización de error, por favor informa del problema ... !",
+    "Welcome to Ht5streamer !<br><br>Make a new search or select a category to start...": "Bienvenido a Ht5streamer ! <br><br> Hacer una nueva búsqueda o seleccionar una categoría para empezar ...",
+    "Downloads": "Descargas",
+    "Open Download folder": "Abrir Carpeta de descarga",
+    "Update files list...": "Actualizar lista  ...",
+    "Updating...": "Actualizando ...",
+    "Stopped...": "Dejado de ...",
+    "Your mega.co link is valid but can't be played yet, (wait a few minutes...)": "Su enlace mega.co es propósito válido no se reproduce aún (espere unos minutos ...)",
+    "Please DONATE if you like this software !" : "Por favor, donar si te gusta este software!"
 }
