--- a/locales/es.json
+++ b/locales/es.json
@@ -105,5 +105,6 @@
 	"Password: ": "Password: ",
 	"Plugins choice:": "Plugins choice:",
 	"Please read the disclaimer here : <u><a id='disclaimer' href='#'>disclaimer</a></u>": "Please read the disclaimer here : <u><a id='disclaimer' href='#'>disclaimer</a></u>",
-  "open torrent" : "Abrir torrent"
+	"open torrent": "Abrir torrent",
+	"Please read the disclaimer here : <u><a id='disclaimer' style='color:red;' href='#'>disclaimer</a></u>": "Please read the disclaimer here : <u><a id='disclaimer' style='color:red;' href='#'>disclaimer</a></u>"
 }
