--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+V 1.0.2
+  * add Piratebay engine
+  * fix many bugs
+
 V 0.5.0
   * Add local file browsing and sharing support
   * Add vimeo engine
