--- a/locales/ht5streamer.json
+++ b/locales/ht5streamer.json
@@ -100,12 +100,13 @@
 	"Stopped...": "Stopped...",
   "Open mega link": "Open mega link",
 	"File not available on mega.co...": "File not available on mega.co...",
-	"<p>Around %s results found </p>": "<p>Around %s results found </p>",
+	"Around %s results found": "Around %s results found",
 	"Your mega.co link is valid but can't be played yet, (wait a few minutes...)": "Your mega.co link is valid but can't be played yet, (wait a few minutes...)",
   "Loading ht5streamer...": "Loading ht5streamer...",
 	"Downloading plugins...": "Downloading plugins...",
   "<b><u>Gmail account (optional... used to report some errors) : </u></b>":"<b><u>Gmail account (optional... used to report some errors) : </u></b>",
   "Username: ":"Username: ",
   "Password: ":"Password: ",
-  "Open Magnet" : "Open Magnet link"
-}
+  "Open Magnet" : "Open Magnet link",
+  "Engine %s ready...!" : "Engine %s ready...!",
+  "Browsing mode, use the pagination bar to navigate":"Browsing mode, use the pagination bar to navigate"
