--- a/locales/ht5streamer.json
+++ b/locales/ht5streamer.json
@@ -109,4 +109,5 @@
   "Password: ":"Password: ",
   "Open Magnet" : "Open Magnet link",
   "Engine %s ready...!" : "Engine %s ready...!",
-  "Browsing mode, use the pagination bar to navigate":"Browsing mode, use the pagination bar to navigate"
+  "Browsing mode, use the pagination bar to navigate":"Browsing mode, use the pagination bar to navigate",
+  "Warnings":"Warnings"
